<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#F9F9F9"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="30dp"
        tools:context=".ui.view.AddRecipieActivity">


        <ImageView
            android:id="@+id/img_recipie"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/traditional_cat"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_edit"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            app:cardCornerRadius="50dp"
            app:layout_constraintBottom_toBottomOf="@+id/img_recipie"
            app:layout_constraintEnd_toEndOf="@+id/img_recipie" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/edit"
            android:elevation="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/card_edit"
            app:layout_constraintEnd_toEndOf="@+id/card_edit"
            app:layout_constraintStart_toStartOf="@+id/card_edit"
            app:layout_constraintTop_toTopOf="@+id/card_edit" />

        <TextView
            android:id="@+id/txtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_name"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="@+id/boxName"
            app:layout_constraintTop_toBottomOf="@+id/img_recipie" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/boxName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@+id/txtName"
            tools:layout_editor_absoluteX="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/add_hint_name"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/txtTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_time"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="@+id/boxTime"
            app:layout_constraintTop_toBottomOf="@+id/boxName" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/boxTime"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/boxName"
            app:layout_constraintTop_toBottomOf="@+id/txtTime">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtTime"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/add_hint_time"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/txt_cat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Category"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="@+id/boxTime"
            app:layout_constraintTop_toBottomOf="@+id/boxTime" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/box_cat"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintStart_toStartOf="@+id/boxTime"
            app:layout_constraintTop_toBottomOf="@+id/txt_cat"
            android:hint="Category">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/dropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Ingredientes"
            app:layout_constraintStart_toStartOf="@+id/boxTime"
            app:layout_constraintTop_toBottomOf="@+id/box_cat" />

        <LinearLayout
            android:id="@+id/ingredientsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            app:layout_constraintTop_toBottomOf="@id/textView5">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_add_ingredients"
                    style="@style/Button_Primary"
                    android:layout_width="wrap_content"
                    android:text="Add" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_delete_ingredient"
                    style="@style/Button_Secondary"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="Delete" />

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Steps"
            app:layout_constraintStart_toStartOf="@+id/boxTime"
            app:layout_constraintTop_toBottomOf="@+id/ingredientsLayout" />

        <LinearLayout
            android:id="@+id/stepsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            app:layout_constraintTop_toBottomOf="@id/textView6">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_add_stpe"
                    style="@style/Button_Primary"
                    android:layout_width="wrap_content"
                    android:text="Add" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_delete_step"
                    style="@style/Button_Secondary"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="Delete" />

            </LinearLayout>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_upload"
            style="@style/Button_Primary"
            android:layout_width="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="Subir receta"
            app:layout_constraintTop_toBottomOf="@+id/stepsLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
